--- a/alacritty/.config/alacritty.toml
+++ b/alacritty/.config/alacritty.toml
@@ -1,5 +1,5 @@
 import = [
-    "~/.config/catppuccin_frappe.toml"
+  "~/.config/catppuccin_frappe.toml"
 ]
 
 live_config_reload = true
@@ -8,7 +8,7 @@ live_config_reload = true
 TERM = "xterm-256color"
 
 [window]
-decorations = "None"
+decorations = "Full"
 dynamic_padding = false
 opacity = 1.0
 title = "Alacritty"
@@ -29,17 +29,17 @@ instance = "Alacritty"
 size = 15.0
 
 [font.bold]
-family = "JetBrains Mono Nerd Font"
+family = "MesloLGS Nerd Font"
 style = "Bold"
 
 [font.italic]
-family = "JetBrains Mono Nerd Font"
+family = "MesloLGS Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrains Mono Nerd Font"
+family = "MesloLGS Nerd Font"
 style = "Regular"
 
 [font.bold_italic]
-family = "JetBrains Mono Nerd Font"
+family = "MesloLGS Mono Nerd Font"
 style = "Bold Italic"
