feat: update title alacritty.toml

--- a/alacritty/.config/alacritty.toml
+++ b/alacritty/.config/alacritty.toml
@@ -9,8 +9,9 @@ TERM = "xterm-256color"
 
 [window]
 decorations = "Full"
+#decorations = "None"
 dynamic_padding = false
-opacity = 1.0
+opacity = 0.9
 title = "Alacritty"
 
 [window.dimensions]
