--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ bind-key C-k resize-pane -U 5
 bind-key C-j resize-pane -D 5
 bind-key C-l resize-pane -R 5
 
-set -g @plugin 'tmux-plugins/tmux-resurrect'              # Restore tmux environment after system restart.             
+#set -g @plugin 'tmux-plugins/tmux-resurrect'              # Restore tmux environment after system restart.             
 set -g @plugin 'tmux-plugins/tmux-continuum'             # automatic restoring and continuous saving of tmux environment.
 set -g @plugin 'catppuccin/tmux'                         # theme   
 set -g @plugin 'tmux-plugins/tpm'
@@ -48,11 +48,18 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
-set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_modules_right "directory date_time"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+
+set -g @catppuccin_date_time_text "%H:%M"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
