feat: update config .tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ bind-key C-k resize-pane -U 5
 bind-key C-j resize-pane -D 5
 bind-key C-l resize-pane -R 5
 
-#set -g @plugin 'tmux-plugins/tmux-resurrect'              # Restore tmux environment after system restart.             
+set -g @plugin 'tmux-plugins/tmux-resurrect'              # Restore tmux environment after system restart.             
 set -g @plugin 'tmux-plugins/tmux-continuum'             # automatic restoring and continuous saving of tmux environment.
 set -g @plugin 'catppuccin/tmux'                         # theme   
 set -g @plugin 'tmux-plugins/tpm'
@@ -61,7 +61,9 @@ set -g @catppuccin_status_right_separator_inverse "no"
 
 set -g @catppuccin_date_time_text "%H:%M"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+#set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_directory_text "#{b:pane_current_path}" # use "#W" for application instead of directory
+
 
 run '~/.tmux/plugins/tpm/tpm'
 
