--- a/alacritty/.config/alacritty.toml
+++ b/alacritty/.config/alacritty.toml
@@ -1,5 +1,8 @@
+#import = [ "~/.config/tokyo-night.toml" ] # or tokyo-night-storm.toml
 import = [
-  "~/.config/catppuccin_frappe.toml"
+   #   "~/.config/catppuccin_frappe.toml"
+   #      "~/.config/tokyo-night.toml"
+      "~/.config/tokyo-night-storm.toml"
 ]
 
 live_config_reload = true
@@ -8,26 +11,30 @@ live_config_reload = true
 TERM = "xterm-256color"
 
 [window]
-#decorations = "Full"
-decorations = "None"
+decorations = "Full"
+#decorations = "None"
 dynamic_padding = false
-opacity = 0.9
+opacity = 1.0
 title = "Alacritty"
 
 [window.dimensions]
-columns = 103
-lines = 24
+columns = 120
+lines = 30
+#columns = 123
+#lines = 30
 
 [window.padding]
-x = 10
-y = 10
+#x = 10
+#y = 10
+x = 5
+y = 5
 
 [window.class]
 general = "Alacritty"
 instance = "Alacritty"
 
 [font]
-size = 15.0
+size = 12.0
 
 [font.bold]
 family = "MesloLGS Nerd Font"
