includes transparency in kitty configuration

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,8 +3,7 @@
 include tokyo-night-kitty.conf
 # END_KITTY_THEME
 
-font_size        15.0
-
+font_size        14.0
 font_family      SauceCodePro Nerd Font
 bold_font        auto
 italic_font      auto
@@ -14,4 +13,12 @@ window_title = Kitty
 
 window_padding_width 10
 hide_window_decorations no
-defaults write -g NSWindowShouldDragOnGesture YES
+
+# Configuração de transparência
+background_opacity 0.8
+
+#defaults write -g NSWindowShouldDragOnGesture YES
+
+# Tamanho inicial da janela (exemplo: 1200x800 pixels)
+#initial_window_width=1200
+#initial_window_height=800
