change theme nord for kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,10 +1,11 @@
 # BEGIN_KITTY_THEME
 # Tokyo-night
-include tokyo-night-kitty.conf
+#include tokyo-night-kitty.conf
 # END_KITTY_THEME
 
-font_size        14.0
-font_family      SauceCodePro Nerd Font
+font_size        12.0
+#font_family      SauceCodePro Nerd Font
+font_family      JetBrains Mono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -15,10 +16,57 @@ window_padding_width 10
 hide_window_decorations no
 
 # Configuração de transparência
-background_opacity 0.8
+background_opacity 0.7
 
 #defaults write -g NSWindowShouldDragOnGesture YES
 
 # Tamanho inicial da janela (exemplo: 1200x800 pixels)
 #initial_window_width=1200
 #initial_window_height=800
+#
+# The amount font size is changed when increasing/decreasing
+# the font size in a running terminal.
+font_size_delta 0.5
+
+# Nord theme
+foreground            #D8DEE9
+background            #2E3440
+selection_foreground  #d8dee9
+selection_background  #4c566a
+url_color             #81a1c1
+cursor                #d8dee9
+
+background_opacity 0.95
+
+# black
+color0   #3b4252
+color8   #4C566A
+
+# red
+color1   #BF616A
+color9   #BF616A
+
+# green
+color2   #A3BE8C
+color10  #A3BE8C
+
+# yellow
+color3   #EBCB8B
+color11  #EBCB8B
+
+# blue
+color4  #81A1C1
+color12 #81A1C1
+
+# magenta
+color5   #B48EAD
+color13  #B48EAD
+
+# cyan
+color6   #88C0D0
+color14  #8FBCBB
+
+# white
+color7   #E5E9F0
+color15  #eceff4
+
