--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -14,6 +14,7 @@ window_title = Kitty
 
 window_padding_width 10
 hide_window_decorations no
+#hide_window_decorations yes
 
 # Configuração de transparência
 background_opacity 0.7
