--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,4 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
-
-set -g prefix ^A
+set -g prefix ^A                        # Change Prefix to CTRL A 
 
 set -g base-index 1                     # Start Counting on 1
 set -g renumber-windows on              # Renumber windows if some is closed
@@ -8,7 +6,7 @@ setw -g mode-keys vi                    # Use vi keys in copy mode
 set -g detach-on-destroy off            # Move to the last active session if current destroyed    
 
 set-option -g mouse on                  # Enable Mouse support Click/Resize
-#set-option -g status-position top       # Move tmux status position to top
+set-option -g status-position top       # Move tmux status position to top
 
 # Split windows in current folder/session
 bind-key '"' split-window -c "#{pane_current_path}"
@@ -27,45 +25,32 @@ bind-key C-k resize-pane -U 5
 bind-key C-j resize-pane -D 5
 bind-key C-l resize-pane -R 5
 
-#set -g @plugin 'tmux-plugins/tmux-resurrect'              # Restore tmux environment after system restart.             
-#set -g @plugin 'tmux-plugins/tmux-continuum'             # automatic restoring and continuous saving of tmux environment.
-#set -g @plugin 'catppuccin/tmux'                         # theme   
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'              # Restore tmux environment after system restart.             
+set -g @plugin 'tmux-plugins/tmux-continuum'             # automatic restoring and continuous saving of tmux environment.
+set -g @plugin 'catppuccin/tmux'                         # theme                       
+set -g @plugin 'tmux-plugins/tpm'                        # Tmux plugin manager
 
-#set -g @nord_tmux_no_patched_font "1"
 #set -g @continuum-restore 'on'
 
-#set -g @catppuccin_flavour 'frappe'
+set -g @catppuccin_flavour 'frappe'
 
-#set -g @catppuccin_window_left_separator ""
-#set -g @catppuccin_window_right_separator " "
-#set -g @catppuccin_window_middle_separator " █"
-#set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
 
-#set -g @catppuccin_window_default_fill "number"
-#set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
 
-#set -g @catppuccin_window_current_fill "number"
-#set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
 
-#set -g @catppuccin_status_modules_right "directory date_time"
-#set -g @catppuccin_status_left_separator  " "
-#set -g @catppuccin_status_right_separator ""
-#set -g @catppuccin_status_fill "icon"
-#set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
 
-#set -g @catppuccin_status_modules_left "session"
-#set -g @catppuccin_status_left_separator  " "
-#set -g @catppuccin_status_right_separator " "
-#set -g @catppuccin_status_right_separator_inverse "no"
-
-#set -g @catppuccin_date_time_text "%H:%M"
-
-#set -g @catppuccin_directory_text "#{pane_current_path}"
-#set -g @catppuccin_directory_text "#{b:pane_current_path}" # use "#W" for application instead of directory
-
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 run '~/.tmux/plugins/tpm/tpm'
-
